@@ -1,5 +1,5 @@
 # Category: Differential Equations
-# Name: Standing Waves
+# Name: Standing waves
 
 the_answer = AskButtons("Number of dimensions?", "2D", "3D");
 
