@@ -1,5 +1,5 @@
 # Category: Chaos
-# Name: Strange Attractor (Duffing's equation)
+# Name: Strange attractor (Duffing's equation)
 #
 # Creates a strange attractor by strobing the forced Duffing
 # equation
