@@ -1,3 +1,8 @@
+Fri Sep 05 15:25:28 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* tutors/*: Add whole bunch of tutorials from what I've been using
+	  in classes (those that weren't a mess)
+
 Fri Sep 05 13:01:51 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/tutors.c: sort the tutors by category and then name.
